--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
             <div class="profile">
 		<img src="./tnb.png" class="thumbnail">
 		<!-- <div class="check"><i class="fas fa-check"></i></div> -->
-		<h3 class="name">The Nail Box</h3>
-		<p class="title">luxurious salon</p>
+		<h3 class="name">Go Gorgeous</h3>
+		<p class="title">Salon & Training Hub</p>
 		<p class="description">Hair,Skin,Nails,Aesthetics</p>
 		<button type="button" class="btn" onclick=" togglePDF()" >Services</button>
 	</div>
